--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "PRECISE_PBMC_Atlas"
+name: PRECISE_PBMC_Atlas
 output_dir: ../docs
 navbar:
-  title: "PRECISE_PBMC_Atlas"
+  title: PRECISE_PBMC_Atlas
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/PietroBearzi/PRECISE_PBMC_Atlas
 output:
   workflowr::wflow_html:
     toc: yes
